--- a/pxe/debian/mnaio-bridges.cfg.j2
+++ b/pxe/debian/mnaio-bridges.cfg.j2
@@ -1,6 +1,6 @@
 # Physical interface, could be bond. This only needs to be set once
-{% for key, value mnaio_host_networks.items() %}
-{% if iface_port != 'none' %}
+{% for key, value in mnaio_host_networks.items() %}
+{% if value.iface_port != 'none' %}
 auto {{ value.iface_port }}
 iface {{ value.iface_port }} inet manual
 {% endif %}
