--- a/pxe/debian/vm.preseed.j2
+++ b/pxe/debian/vm.preseed.j2
@@ -227,4 +227,4 @@ d-i preseed/late_command string \
 # Finish
 
 # Reboot after the install is finished.
-finish-install finish-install/reboot_in_progress note
+d-i finish-install/reboot_in_progress note
